# p2f-portal

./: .gitignore  Past_2_Future_Portal.py  README.md  dockerfile  pyproject.toml
.github/workflows/: main.yml
.streamlit/: config.toml
Kubernetes/: deploy-service.yml
OpenShift/: deploy-service.yml  ingress.yml
docker-compose/: docker-compose.yml
p2f-portal/: Add_Dataset.py  Dataset_Detail.py  Past_2_Future_Portal.py  config.toml  entry.py  login.py  new_Add_Dataset.py
p2f-portal/.streamlit/: config.toml
p2f-portal/assets/: ExistingDatasets.xlsx  Privacy_Policy.md  disclosure_text.py  example-new-dataset.json  example-new-dataset.xlsx  example-new-publication.json
p2f-portal/pages/: 01_Source_Datasets.py  02_New_Datasets.py  03_Project_Publications.py  04_Data_Locations.py  Add_Dataset.py  Dataset_Detail.py  Privacy_Policy.py
