[project]
name = "p2f-portal"
version = "0.0.1"
description = "The Streamlit based data portal of the Past to Future project. "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "p2f-client-py",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.0",
]

[tool.uv.sources]
p2f-client-py = { git = "https://github.com/Past-to-Future-EU-Horizon/p2f-client-py" }
