[project]
name = "p2f-portal"
version = "0.0.1"
description = "The Streamlit based data portal of the Past to Future project. "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "furl>=2.1.4",
    "openpyxl>=3.1.5",
    "p2f-client-py",
    "plotly>=6.3.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.0",
    "streamlit-folium>=0.25.1",
]

[tool.uv.sources]
p2f-client-py = { git = "https://github.com/Past-to-Future-EU-Horizon/p2f-client-py" }
